back to work commit